# A4VAI-Algorithms-ROS2

./: .gitignore  .gitmodules  README.md
CollisionAvoidance/collision_avoidance/: package.xml
CollisionAvoidance/collision_avoidance/collision_avoidance/: obstacle_avoidance_ros2.py
CollisionAvoidance/custom_msgs/msg/: Heartbeat.msg
Controller/controller/controller/: controller.py
Controller/custom_msgs/: CMakeLists.txt
PathFollowing/custom_msgs/msg/: GlobalWaypointSetpoint.msg
PathFollowing/pathfollowing/: setup.py
PathFollowing/pathfollowing/pathfollowing/: node_MPPI_output.py  node_att_ctrl.py
PathPlanning/pathplanning/: README.md
PathPlanning/pathplanning/pathplanning/: Plan2WP.py
a4vai/: setup.py
a4vai/a4vai/: Edit.py
a4vai/a4vai/Controller/: controller.py  get_waypoint.py  give_global_waypoint.py  path_follow_service.py  path_plan_service.py  test_att_ctrl.py
a4vai/a4vai/JbnU_obstacle_avoidance/: ROS_2_PUB_depth.py  obstacle_avoidance_ros2.py
a4vai/a4vai/PathFollowing/: node_MPPI_output.py  node_att_ctrl.py
a4vai/a4vai/PathFollowing/PF_modules/: quadrotor_6dof.py
a4vai/a4vai/PathPlanning/: Plan2WP.py
a4vai/a4vai/pathFollowing/: README.md  node_att_ctrl.py
a4vai/a4vai/pathFollowing/PF_modules/: Funcs_PF_Base.py  MPPI_guidance.py  set_parameter.py
a4vai/a4vai/pathPlanning/: README.md
algorithm_test/: package.xml  setup.cfg  setup.py
algorithm_test/algorithm_test/: path_following_test.py  path_planning_test.py
algorithm_test/algorithm_test/ca_pf_integrated_test/: ca_pf_integrated_test.py  wp.csv
algorithm_test/algorithm_test/collosion_avoidance_unit_test/: collision_avoidance_test.py  init_variable_ca.py  log.txt  wp.csv
algorithm_test/algorithm_test/lib/: callback_functions.py  common_fuctions.py  data_class.py  publish_function.py  publisher.py  subscriber.py  test.py  timer.py
algorithm_test/algorithm_test/path_following_unit_test/: path_following_test.py  wp.csv
algorithm_test/algorithm_test/path_planning_unit_test/: path_planning_test.py
algorithm_test/algorithm_test/pp_pf_integrated_test/: pp_pf_integrated_test.py
collision_avoidance/: README.md  package.xml  setup.py
collision_avoidance/collision_avoidance/: ROS_2_PUB_depth.py  obstacle_avoidance_ros2.py  readme.txt  utils_gray.py
controller/controller/: commonFcn.py  controller.py  give_global_waypoint.py  initVar.py
controller_new/: package.xml  setup.py
controller_new/controller/: commonFcn.py  controller.py  initVar.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ConveyLocalWaypointComplete.msg  ConveyingWaypointFlag.msg  GlobalWaypointSetpoint.msg  LocalWaypointSetpoint.msg  StateFlag.msg  WaypointIndex.msg
custom_msgs/srv/: WaypointSetpoint.srv
lidar/: package.xml  setup.py
lidar/lidar/: callback_functions.py  check_collision.py  common_fuctions.py  data_class.py  lidar.py  plot.py
pathfollowing/: README.md  package.xml
pathfollowing/pathfollowing/: node_MPPI_output copy.py  node_MPPI_output.py  node_att_ctrl copy.py  node_att_ctrl.py
pathfollowing/pathfollowing/PF_modules/: Funcs_PF_Base.py  quadrotor_6dof.py  set_parameter.py
pathfollowing/pathfollowing/etc_class/: data_structure.py  simulation_cases.py  simulation_variables.py
pathfollowing/pathfollowing/flight_functions/: GPR.py  MPPI_guidance.py  guidance_path_following.py  node_MPPI_output.py  node_accel_ctrl.py  path_following_required_info.py  utility_funcs.py
pathfollowing/pathfollowing/models/: quadrotor.py
pathfollowing/pathfollowing/necessary_settings/: quadrotor_iris_parameters.py  waypoint.py
pathplanning/: package.xml  setup.cfg  setup.py
pathplanning/pathplanning/: Plan2WP.py
pathplanning/pathplanning/model/: sac_pp_100000.onnx
plotter/: package.xml  setup.py
plotter/plotter/: initVar.py  plotter.py
pub_depth/: package.xml  setup.cfg  setup.py
pub_depth/pub_depth/: ROS_2_PUB_depth.py
py_pubsub/: package.xml  setup.py
py_pubsub/msg/: CustomMsg.msg
py_pubsub/py_pubsub/: Image2Plan.py  Plan2WP.py
(+14 files in other folders)
