<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_avoidance</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kestrel@inha.edu">kestrel</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  
   <!-- APT dependencies -->
  <exec_depend>ros-humble-cv-bridge</exec_depend>
  <exec_depend>libgl1-mesa-glx</exec_depend>
  <exec_depend>libffi-dev</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-dev</exec_depend>
  
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-onnxruntime-gpu-pip</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  
  <exec_depend>python3-onnx</exec_depend>
  <exec_depend>python3-pytictoc</exec_depend>
  <exec_depend>python3-pycuda</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
