<package format="3">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>Example package for custom messages</description>
  <maintainer email="khw1223@inha.edu">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

